go/gram.output

state 0
	$accept: .list $end 
	$$1: .    (1)

	.  reduce 1 (src line 69)

	list  goto 1
	$$1  goto 2

state 1
	$accept:  list.$end 

	$end  accept
	.  error


state 2
	list:  $$1.stmts 
	stmts: .    (3)

	QMARK2  shift 28
	DOLLAR2  shift 38
	WHILE  shift 17
	IF  shift 19
	FOR  shift 18
	EVAL  shift 36
	BREAK  shift 10
	CONTINUE  shift 11
	TASK  shift 40
	SYM_DELETE  shift 14
	UNDEFINE  shift 21
	RETURN  shift 9
	FUNC  shift 44
	DEFINED  shift 30
	READONLY  shift 15
	ONCHANGE  shift 16
	GLOBALDEC  shift 12
	CLASS  shift 45
	KW_NEW  shift 20
	NARGS  shift 41
	TYPEOF  shift 42
	XY  shift 43
	DUR  shift 48
	VOL  shift 47
	TIME  shift 51
	CHAN  shift 49
	PITCH  shift 52
	LENGTH  shift 53
	NUMBER  shift 57
	TYPE  shift 54
	ATTRIB  shift 55
	FLAGS  shift 56
	PORT  shift 50
	PHRASE  shift 26
	STRING  shift 25
	NAME  shift 46
	INTEGER  shift 23
	OBJECT  shift 39
	DOUBLE  shift 24
	INC  shift 34
	DEC  shift 35
	'-'  shift 31
	BANG  shift 33
	'~'  shift 32
	';'  shift 5
	'('  shift 29
	'{'  shift 13
	'['  shift 22
	'$'  shift 37
	.  reduce 3 (src line 79)

	expr  goto 8
	stmt  goto 4
	stmts  goto 3
	nosemi  goto 6
	stmtnv  goto 7
	var  goto 27

state 3
	list:  $$1 stmts.    (2)

	.  reduce 2 (src line 74)


state 4
	stmts:  stmt.stmts 
	stmts: .    (3)

	QMARK2  shift 28
	DOLLAR2  shift 38
	WHILE  shift 17
	IF  shift 19
	FOR  shift 18
	EVAL  shift 36
	BREAK  shift 10
	CONTINUE  shift 11
	TASK  shift 40
	SYM_DELETE  shift 14
	UNDEFINE  shift 21
	RETURN  shift 9
	FUNC  shift 44
	DEFINED  shift 30
	READONLY  shift 15
	ONCHANGE  shift 16
	GLOBALDEC  shift 12
	CLASS  shift 45
	KW_NEW  shift 20
	NARGS  shift 41
	TYPEOF  shift 42
	XY  shift 43
	DUR  shift 48
	VOL  shift 47
	TIME  shift 51
	CHAN  shift 49
	PITCH  shift 52
	LENGTH  shift 53
	NUMBER  shift 57
	TYPE  shift 54
	ATTRIB  shift 55
	FLAGS  shift 56
	PORT  shift 50
	PHRASE  shift 26
	STRING  shift 25
	NAME  shift 46
	INTEGER  shift 23
	OBJECT  shift 39
	DOUBLE  shift 24
	INC  shift 34
	DEC  shift 35
	'-'  shift 31
	BANG  shift 33
	'~'  shift 32
	';'  shift 5
	'('  shift 29
	'{'  shift 13
	'['  shift 22
	'$'  shift 37
	.  reduce 3 (src line 79)

	expr  goto 8
	stmt  goto 4
	stmts  goto 58
	nosemi  goto 6
	stmtnv  goto 7
	var  goto 27

state 5
	stmt:  ';'.    (7)

	.  reduce 7 (src line 85)


6: shift/reduce conflict (shift 59(0), red'n 8(0)) on ';'
state 6
	stmt:  nosemi.    (8)
	stmt:  nosemi.';' 

	';'  shift 59
	.  reduce 8 (src line 86)


state 7
	nosemi:  stmtnv.    (10)

	.  reduce 10 (src line 89)


8: shift/reduce conflict (shift 80(0), red'n 11(0)) on SYM_IN
8: shift/reduce conflict (shift 90(1), red'n 11(0)) on PLUSEQ
8: shift/reduce conflict (shift 91(1), red'n 11(0)) on MINUSEQ
8: shift/reduce conflict (shift 92(1), red'n 11(0)) on MULEQ
8: shift/reduce conflict (shift 93(1), red'n 11(0)) on DIVEQ
8: shift/reduce conflict (shift 95(1), red'n 11(0)) on AMPEQ
8: shift/reduce conflict (shift 84(15), red'n 11(0)) on INC
8: shift/reduce conflict (shift 85(15), red'n 11(0)) on DEC
8: shift/reduce conflict (shift 94(1), red'n 11(0)) on OREQ
8: shift/reduce conflict (shift 96(1), red'n 11(0)) on XOREQ
8: shift/reduce conflict (shift 97(1), red'n 11(0)) on RSHIFTEQ
8: shift/reduce conflict (shift 98(1), red'n 11(0)) on LSHIFTEQ
8: shift/reduce conflict (shift 99(1), red'n 11(0)) on '='
8: shift/reduce conflict (shift 62(2), red'n 11(0)) on '?'
8: shift/reduce conflict (shift 89(4), red'n 11(0)) on OR
8: shift/reduce conflict (shift 88(5), red'n 11(0)) on AND
8: shift/reduce conflict (shift 68(6), red'n 11(0)) on '|'
8: shift/reduce conflict (shift 70(7), red'n 11(0)) on '^'
8: shift/reduce conflict (shift 69(8), red'n 11(0)) on '&'
8: shift/reduce conflict (shift 73(9), red'n 11(0)) on GT
8: shift/reduce conflict (shift 75(9), red'n 11(0)) on GE
8: shift/reduce conflict (shift 74(9), red'n 11(0)) on LT
8: shift/reduce conflict (shift 76(9), red'n 11(0)) on LE
8: shift/reduce conflict (shift 77(9), red'n 11(0)) on EQ
8: shift/reduce conflict (shift 79(9), red'n 11(0)) on NE
8: shift/reduce conflict (shift 78(9), red'n 11(0)) on REGEXEQ
8: shift/reduce conflict (shift 71(10), red'n 11(0)) on LSHIFT
8: shift/reduce conflict (shift 72(10), red'n 11(0)) on RSHIFT
8: shift/reduce conflict (shift 64(11), red'n 11(0)) on '+'
8: shift/reduce conflict (shift 65(11), red'n 11(0)) on '-'
8: shift/reduce conflict (shift 66(12), red'n 11(0)) on '*'
8: shift/reduce conflict (shift 67(12), red'n 11(0)) on '/'
8: shift/reduce conflict (shift 63(14), red'n 11(0)) on '%'
8: shift/reduce conflict (shift 86(14), red'n 11(0)) on '.'
8: shift/reduce conflict (shift 87(0), red'n 11(0)) on '('
8: shift/reduce conflict (shift 61(0), red'n 11(0)) on '{'
8: shift/reduce conflict (shift 60(0), red'n 11(0)) on '['
state 8
	nosemi:  expr.    (11)
	expr:  expr.'[' expr ']' 
	expr:  expr.'{' select1 select2 expr select3 '}' end 
	expr:  expr.'?' tcond expr goto ':' expr end 
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'|' expr 
	expr:  expr.'&' expr 
	expr:  expr.'^' expr 
	expr:  expr.LSHIFT expr 
	expr:  expr.RSHIFT expr 
	expr:  expr.GT expr 
	expr:  expr.LT expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.REGEXEQ expr 
	expr:  expr.NE expr 
	expr:  expr.SYM_IN expr 
	expr:  expr.and expr end 
	expr:  expr.or expr end 
	expr:  expr.equals expr 
	expr:  expr.INC 
	expr:  expr.DEC 
	expr:  expr.'.' dottype 
	expr:  expr.'.' method 
	expr:  expr.'.' method '(' preobj arglist ')' 
	expr:  expr.'(' prefunc1 arglist ')' 

	SYM_IN  shift 80
	PLUSEQ  shift 90
	MINUSEQ  shift 91
	MULEQ  shift 92
	DIVEQ  shift 93
	AMPEQ  shift 95
	INC  shift 84
	DEC  shift 85
	OREQ  shift 94
	XOREQ  shift 96
	RSHIFTEQ  shift 97
	LSHIFTEQ  shift 98
	'='  shift 99
	'?'  shift 62
	OR  shift 89
	AND  shift 88
	'|'  shift 68
	'^'  shift 70
	'&'  shift 69
	GT  shift 73
	GE  shift 75
	LT  shift 74
	LE  shift 76
	EQ  shift 77
	NE  shift 79
	REGEXEQ  shift 78
	LSHIFT  shift 71
	RSHIFT  shift 72
	'+'  shift 64
	'-'  shift 65
	'*'  shift 66
	'/'  shift 67
	'%'  shift 63
	'.'  shift 86
	'('  shift 87
	'{'  shift 61
	'['  shift 60
	.  reduce 11 (src line 90)

	and  goto 81
	or  goto 82
	equals  goto 83

9: shift/reduce conflict (shift 100(0), red'n 12(0)) on '('
state 9
	stmtnv:  RETURN.    (12)
	stmtnv:  RETURN.'(' ')' 
	stmtnv:  RETURN.'(' expr ')' 

	'('  shift 100
	.  reduce 12 (src line 91)


state 10
	stmtnv:  BREAK.    (15)

	.  reduce 15 (src line 98)


state 11
	stmtnv:  CONTINUE.    (16)

	.  reduce 16 (src line 103)


state 12
	stmtnv:  GLOBALDEC.$$17 globlist 
	expr:  GLOBALDEC.'(' $$97 globvar $$98 ')' 
	$$17: .    (17)

	'('  shift 102
	.  reduce 17 (src line 108)

	$$17  goto 101

state 13
	expr:  '{'.stmts '}' 
	stmts: .    (3)

	QMARK2  shift 28
	DOLLAR2  shift 38
	WHILE  shift 17
	IF  shift 19
	FOR  shift 18
	EVAL  shift 36
	BREAK  shift 10
	CONTINUE  shift 11
	TASK  shift 40
	SYM_DELETE  shift 14
	UNDEFINE  shift 21
	RETURN  shift 9
	FUNC  shift 44
	DEFINED  shift 30
	READONLY  shift 15
	ONCHANGE  shift 16
	GLOBALDEC  shift 12
	CLASS  shift 45
	KW_NEW  shift 20
	NARGS  shift 41
	TYPEOF  shift 42
	XY  shift 43
	DUR  shift 48
	VOL  shift 47
	TIME  shift 51
	CHAN  shift 49
	PITCH  shift 52
	LENGTH  shift 53
	NUMBER  shift 57
	TYPE  shift 54
	ATTRIB  shift 55
	FLAGS  shift 56
	PORT  shift 50
	PHRASE  shift 26
	STRING  shift 25
	NAME  shift 46
	INTEGER  shift 23
	OBJECT  shift 39
	DOUBLE  shift 24
	INC  shift 34
	DEC  shift 35
	'-'  shift 31
	BANG  shift 33
	'~'  shift 32
	';'  shift 5
	'('  shift 29
	'{'  shift 13
	'['  shift 22
	'$'  shift 37
	.  reduce 3 (src line 79)

	expr  goto 8
	stmt  goto 4
	stmts  goto 103
	nosemi  goto 6
	stmtnv  goto 7
	var  goto 27

state 14
	expr:  SYM_DELETE.expr 

	QMARK2  shift 28
	DOLLAR2  shift 38
	WHILE  shift 17
	IF  shift 19
	FOR  shift 18
	EVAL  shift 36
	TASK  shift 40
	SYM_DELETE  shift 14
	UNDEFINE  shift 21
	FUNC  shift 44
	DEFINED  shift 30
	READONLY  shift 15
	ONCHANGE  shift 16
	GLOBALDEC  shift 105
	CLASS  shift 45
	KW_NEW  shift 20
	NARGS  shift 41
	TYPEOF  shift 42
	XY  shift 43
	DUR  shift 48
	VOL  shift 47
	TIME  shift 51
	CHAN  shift 49
	PITCH  shift 52
	LENGTH  shift 53
	NUMBER  shift 57
	TYPE  shift 54
	ATTRIB  shift 55
	FLAGS  shift 56
	PORT  shift 50
	PHRASE  shift 26
	STRING  shift 25
	NAME  shift 46
	INTEGER  shift 23
	OBJECT  shift 39
	DOUBLE  shift 24
	INC  shift 34
	DEC  shift 35
	'-'  shift 31
	BANG  shift 33
	'~'  shift 32
	'('  shift 29
	'{'  shift 13
	'['  shift 22
	'$'  shift 37
	.  error

	expr  goto 104
	var  goto 27

state 15
	expr:  READONLY.var 

	CLASS  shift 107
	DUR  shift 48
	VOL  shift 47
	TIME  shift 51
	CHAN  shift 49
	PITCH  shift 52
	LENGTH  shift 53
	NUMBER  shift 57
	TYPE  shift 54
	ATTRIB  shift 55
	FLAGS  shift 56
	PORT  shift 50
	NAME  shift 46
	.  error

	var  goto 106

state 16
	expr:  ONCHANGE.'(' var ',' expr ')' 

	'('  shift 108
	.  error


state 17
	expr:  WHILE.$$23 '(' expr tcond ')' stmt goto end 
	$$23: .    (23)

	.  reduce 23 (src line 129)

	$$23  goto 109

state 18
	expr:  FOR.'(' optstmt $$25 ';' optrelx tfcond ';' optstmt goto ')' stmt goto end 
	expr:  FOR.'(' var SYM_IN $$27 expr forin1 forin2 ')' stmt goto forinend 

	'('  shift 110
	.  error


state 19
	expr:  IF.'(' expr tcond ')' stmt end 
	expr:  IF.'(' expr tcond ')' stmt ELSE goto stmt end 

	'('  shift 111
	.  error


state 20
	expr:  KW_NEW.var '(' prefunc3 $$31 narglist ')' 
	expr:  KW_NEW.'(' prefunc3 expr ')' var '(' narglist ')' 

	CLASS  shift 107
	DUR  shift 48
	VOL  shift 47
	TIME  shift 51
	CHAN  shift 49
	PITCH  shift 52
	LENGTH  shift 53
	NUMBER  shift 57
	TYPE  shift 54
	ATTRIB  shift 55
	FLAGS  shift 56
	PORT  shift 50
	NAME  shift 46
	'('  shift 113
	.  error

	var  goto 112

state 21
	expr:  UNDEFINE.var 
	expr:  UNDEFINE.'(' var ')' 

	CLASS  shift 107
	DUR  shift 48
	VOL  shift 47
	TIME  shift 51
	CHAN  shift 49
	PITCH  shift 52
	LENGTH  shift 53
	NUMBER  shift 57
	TYPE  shift 54
	ATTRIB  shift 55
	FLAGS  shift 56
	PORT  shift 50
	NAME  shift 46
	'('  shift 115
	.  error

	var  goto 114

state 22
	expr:  '['.newthing1 arrlist ']' 
	newthing1: .    (132)

	.  reduce 132 (src line 454)

	newthing1  goto 116

state 23
	expr:  INTEGER.    (37)

	.  reduce 37 (src line 202)


24: shift/reduce conflict (shift 119(0), red'n 38(0)) on DUR
24: shift/reduce conflict (shift 118(0), red'n 38(0)) on VOL
24: shift/reduce conflict (shift 122(0), red'n 38(0)) on TIME
24: shift/reduce conflict (shift 120(0), red'n 38(0)) on CHAN
24: shift/reduce conflict (shift 123(0), red'n 38(0)) on PITCH
24: shift/reduce conflict (shift 124(0), red'n 38(0)) on LENGTH
24: shift/reduce conflict (shift 128(0), red'n 38(0)) on NUMBER
24: shift/reduce conflict (shift 125(0), red'n 38(0)) on TYPE
24: shift/reduce conflict (shift 126(0), red'n 38(0)) on ATTRIB
24: shift/reduce conflict (shift 127(0), red'n 38(0)) on FLAGS
24: shift/reduce conflict (shift 121(0), red'n 38(0)) on PORT
state 24
	expr:  DOUBLE.    (38)
	expr:  DOUBLE.dottype 

	DUR  shift 119
	VOL  shift 118
	TIME  shift 122
	CHAN  shift 120
	PITCH  shift 123
	LENGTH  shift 124
	NUMBER  shift 128
	TYPE  shift 125
	ATTRIB  shift 126
	FLAGS  shift 127
	PORT  shift 121
	.  reduce 38 (src line 203)

	dottype  goto 117

state 25
	expr:  STRING.    (39)

	.  reduce 39 (src line 204)


state 26
	expr:  PHRASE.    (40)

	.  reduce 40 (src line 205)


27: shift/reduce conflict (shift 129(0), red'n 41(0)) on '('
state 27
	expr:  var.    (41)
	expr:  var.'(' prefunc3 arglist ')' 

	'('  shift 129
	.  reduce 41 (src line 206)


state 28
	expr:  QMARK2.    (42)

	.  reduce 42 (src line 207)


state 29
	expr:  '('.expr ')' 

	QMARK2  shift 28
	DOLLAR2  shift 38
	WHILE  shift 17
	IF  shift 19
	FOR  shift 18
	EVAL  shift 36
	TASK  shift 40
	SYM_DELETE  shift 14
	UNDEFINE  shift 21
	FUNC  shift 44
	DEFINED  shift 30
	READONLY  shift 15
	ONCHANGE  shift 16
	GLOBALDEC  shift 105
	CLASS  shift 45
	KW_NEW  shift 20
	NARGS  shift 41
	TYPEOF  shift 42
	XY  shift 43
	DUR  shift 48
	VOL  shift 47
	TIME  shift 51
	CHAN  shift 49
	PITCH  shift 52
	LENGTH  shift 53
	NUMBER  shift 57
	TYPE  shift 54
	ATTRIB  shift 55
	FLAGS  shift 56
	PORT  shift 50
	PHRASE  shift 26
	STRING  shift 25
	NAME  shift 46
	INTEGER  shift 23
	OBJECT  shift 39
	DOUBLE  shift 24
	INC  shift 34
	DEC  shift 35
	'-'  shift 31
	BANG  shift 33
	'~'  shift 32
	'('  shift 29
	'{'  shift 13
	'['  shift 22
	'$'  shift 37
	.  error

	expr  goto 130
	var  goto 27

state 30
	expr:  DEFINED.'(' var ')' 
	expr:  DEFINED.'(' '$' ')' 
	expr:  DEFINED.'(' DOLLAR2 ')' 
	expr:  DEFINED.'(' expr '.' method ')' 
	expr:  DEFINED.var 

	CLASS  shift 107
	DUR  shift 48
	VOL  shift 47
	TIME  shift 51
	CHAN  shift 49
	PITCH  shift 52
	LENGTH  shift 53
	NUMBER  shift 57
	TYPE  shift 54
	ATTRIB  shift 55
	FLAGS  shift 56
	PORT  shift 50
	NAME  shift 46
	'('  shift 131
	.  error

	var  goto 132

state 31
	expr:  '-'.expr 

	QMARK2  shift 28
	DOLLAR2  shift 38
	WHILE  shift 17
	IF  shift 19
	FOR  shift 18
	EVAL  shift 36
	TASK  shift 40
	SYM_DELETE  shift 14
	UNDEFINE  shift 21
	FUNC  shift 44
	DEFINED  shift 30
	READONLY  shift 15
	ONCHANGE  shift 16
	GLOBALDEC  shift 105
	CLASS  shift 45
	KW_NEW  shift 20
	NARGS  shift 41
	TYPEOF  shift 42
	XY  shift 43
	DUR  shift 48
	VOL  shift 47
	TIME  shift 51
	CHAN  shift 49
	PITCH  shift 52
	LENGTH  shift 53
	NUMBER  shift 57
	TYPE  shift 54
	ATTRIB  shift 55
	FLAGS  shift 56
	PORT  shift 50
	PHRASE  shift 26
	STRING  shift 25
	NAME  shift 46
	INTEGER  shift 23
	OBJECT  shift 39
	DOUBLE  shift 24
	INC  shift 34
	DEC  shift 35
	'-'  shift 31
	BANG  shift 33
	'~'  shift 32
	'('  shift 29
	'{'  shift 13
	'['  shift 22
	'$'  shift 37
	.  error

	expr  goto 133
	var  goto 27

state 32
	expr:  '~'.expr 

	QMARK2  shift 28
	DOLLAR2  shift 38
	WHILE  shift 17
	IF  shift 19
	FOR  shift 18
	EVAL  shift 36
	TASK  shift 40
	SYM_DELETE  shift 14
	UNDEFINE  shift 21
	FUNC  shift 44
	DEFINED  shift 30
	READONLY  shift 15
	ONCHANGE  shift 16
	GLOBALDEC  shift 105
	CLASS  shift 45
	KW_NEW  shift 20
	NARGS  shift 41
	TYPEOF  shift 42
	XY  shift 43
	DUR  shift 48
	VOL  shift 47
	TIME  shift 51
	CHAN  shift 49
	PITCH  shift 52
	LENGTH  shift 53
	NUMBER  shift 57
	TYPE  shift 54
	ATTRIB  shift 55
	FLAGS  shift 56
	PORT  shift 50
	PHRASE  shift 26
	STRING  shift 25
	NAME  shift 46
	INTEGER  shift 23
	OBJECT  shift 39
	DOUBLE  shift 24
	INC  shift 34
	DEC  shift 35
	'-'  shift 31
	BANG  shift 33
	'~'  shift 32
	'('  shift 29
	'{'  shift 13
	'['  shift 22
	'$'  shift 37
	.  error

	expr  goto 134
	var  goto 27

state 33
	expr:  BANG.expr 

	QMARK2  shift 28
	DOLLAR2  shift 38
	WHILE  shift 17
	IF  shift 19
	FOR  shift 18
	EVAL  shift 36
	TASK  shift 40
	SYM_DELETE  shift 14
	UNDEFINE  shift 21
	FUNC  shift 44
	DEFINED  shift 30
	READONLY  shift 15
	ONCHANGE  shift 16
	GLOBALDEC  shift 105
	CLASS  shift 45
	KW_NEW  shift 20
	NARGS  shift 41
	TYPEOF  shift 42
	XY  shift 43
	DUR  shift 48
	VOL  shift 47
	TIME  shift 51
	CHAN  shift 49
	PITCH  shift 52
	LENGTH  shift 53
	NUMBER  shift 57
	TYPE  shift 54
	ATTRIB  shift 55
	FLAGS  shift 56
	PORT  shift 50
	PHRASE  shift 26
	STRING  shift 25
	NAME  shift 46
	INTEGER  shift 23
	OBJECT  shift 39
	DOUBLE  shift 24
	INC  shift 34
	DEC  shift 35
	'-'  shift 31
	BANG  shift 33
	'~'  shift 32
	'('  shift 29
	'{'  shift 13
	'['  shift 22
	'$'  shift 37
	.  error

	expr  goto 135
	var  goto 27

state 34
	expr:  INC.expr 

	QMARK2  shift 28
	DOLLAR2  shift 38
	WHILE  shift 17
	IF  shift 19
	FOR  shift 18
	EVAL  shift 36
	TASK  shift 40
	SYM_DELETE  shift 14
	UNDEFINE  shift 21
	FUNC  shift 44
	DEFINED  shift 30
	READONLY  shift 15
	ONCHANGE  shift 16
	GLOBALDEC  shift 105
	CLASS  shift 45
	KW_NEW  shift 20
	NARGS  shift 41
	TYPEOF  shift 42
	XY  shift 43
	DUR  shift 48
	VOL  shift 47
	TIME  shift 51
	CHAN  shift 49
	PITCH  shift 52
	LENGTH  shift 53
	NUMBER  shift 57
	TYPE  shift 54
	ATTRIB  shift 55
	FLAGS  shift 56
	PORT  shift 50
	PHRASE  shift 26
	STRING  shift 25
	NAME  shift 46
	INTEGER  shift 23
	OBJECT  shift 39
	DOUBLE  shift 24
	INC  shift 34
	DEC  shift 35
	'-'  shift 31
	BANG  shift 33
	'~'  shift 32
	'('  shift 29
	'{'  shift 13
	'['  shift 22
	'$'  shift 37
	.  error

	expr  goto 136
	var  goto 27

state 35
	expr:  DEC.expr 

	QMARK2  shift 28
	DOLLAR2  shift 38
	WHILE  shift 17
	IF  shift 19
	FOR  shift 18
	EVAL  shift 36
	TASK  shift 40
	SYM_DELETE  shift 14
	UNDEFINE  shift 21
	FUNC  shift 44
	DEFINED  shift 30
	READONLY  shift 15
	ONCHANGE  shift 16
	GLOBALDEC  shift 105
	CLASS  shift 45
	KW_NEW  shift 20
	NARGS  shift 41
	TYPEOF  shift 42
	XY  shift 43
	DUR  shift 48
	VOL  shift 47
	TIME  shift 51
	CHAN  shift 49
	PITCH  shift 52
	LENGTH  shift 53
	NUMBER  shift 57
	TYPE  shift 54
	ATTRIB  shift 55
	FLAGS  shift 56
	PORT  shift 50
	PHRASE  shift 26
	STRING  shift 25
	NAME  shift 46
	INTEGER  shift 23
	OBJECT  shift 39
	DOUBLE  shift 24
	INC  shift 34
	DEC  shift 35
	'-'  shift 31
	BANG  shift 33
	'~'  shift 32
	'('  shift 29
	'{'  shift 13
	'['  shift 22
	'$'  shift 37
	.  error

	expr  goto 137
	var  goto 27

state 36
	expr:  EVAL.expr 

	QMARK2  shift 28
	DOLLAR2  shift 38
	WHILE  shift 17
	IF  shift 19
	FOR  shift 18
	EVAL  shift 36
	TASK  shift 40
	SYM_DELETE  shift 14
	UNDEFINE  shift 21
	FUNC  shift 44
	DEFINED  shift 30
	READONLY  shift 15
	ONCHANGE  shift 16
	GLOBALDEC  shift 105
	CLASS  shift 45
	KW_NEW  shift 20
	NARGS  shift 41
	TYPEOF  shift 42
	XY  shift 43
	DUR  shift 48
	VOL  shift 47
	TIME  shift 51
	CHAN  shift 49
	PITCH  shift 52
	LENGTH  shift 53
	NUMBER  shift 57
	TYPE  shift 54
	ATTRIB  shift 55
	FLAGS  shift 56
	PORT  shift 50
	PHRASE  shift 26
	STRING  shift 25
	NAME  shift 46
	INTEGER  shift 23
	OBJECT  shift 39
	DOUBLE  shift 24
	INC  shift 34
	DEC  shift 35
	'-'  shift 31
	BANG  shift 33
	'~'  shift 32
	'('  shift 29
	'{'  shift 13
	'['  shift 22
	'$'  shift 37
	.  error

	expr  goto 138
	var  goto 27

state 37
	expr:  '$'.    (82)

	.  reduce 82 (src line 269)


state 38
	expr:  DOLLAR2.    (83)

	.  reduce 83 (src line 270)


state 39
	expr:  OBJECT.    (84)

	.  reduce 84 (src line 271)


state 40
	expr:  TASK.var '(' prefunc3 arglist ')' 
	expr:  TASK.expr '(' arglist ')' 
	expr:  TASK.expr '.' method '(' preobj arglist ')' 

	QMARK2  shift 28
	DOLLAR2  shift 38
	WHILE  shift 17
	IF  shift 19
	FOR  shift 18
	EVAL  shift 36
	TASK  shift 40
	SYM_DELETE  shift 14
	UNDEFINE  shift 21
	FUNC  shift 44
	DEFINED  shift 30
	READONLY  shift 15
	ONCHANGE  shift 16
	GLOBALDEC  shift 105
	CLASS  shift 45
	KW_NEW  shift 20
	NARGS  shift 41
	TYPEOF  shift 42
	XY  shift 43
	DUR  shift 48
	VOL  shift 47
	TIME  shift 51
	CHAN  shift 49
	PITCH  shift 52
	LENGTH  shift 53
	NUMBER  shift 57
	TYPE  shift 54
	ATTRIB  shift 55
	FLAGS  shift 56
	PORT  shift 50
	PHRASE  shift 26
	STRING  shift 25
	NAME  shift 46
	INTEGER  shift 23
	OBJECT  shift 39
	DOUBLE  shift 24
	INC  shift 34
	DEC  shift 35
	'-'  shift 31
	BANG  shift 33
	'~'  shift 32
	'('  shift 29
	'{'  shift 13
	'['  shift 22
	'$'  shift 37
	.  error

	expr  goto 140
	var  goto 139

state 41
	expr:  NARGS.'(' ')' 

	'('  shift 141
	.  error


state 42
	expr:  TYPEOF.'(' expr ')' 

	'('  shift 142
	.  error


state 43
	expr:  XY.'(' expr ',' expr ')' 
	expr:  XY.'(' expr ',' expr ',' expr ',' expr ')' 

	'('  shift 143
	.  error


state 44
	expr:  FUNC.'(' expr ')' 
	expr:  FUNC.var $$101 funcstart '(' $$102 prmlist $$103 ')' '{' stmts '}' 
	expr:  FUNC.var $$105 funcstart $$106 '{' stmts '}' 
	expr:  FUNC.uniqvar $$108 funcstart '(' $$109 prmlist $$110 ')' '{' stmts '}' 
	expr:  FUNC.uniqvar $$112 funcstart $$113 '{' stmts '}' 

	CLASS  shift 107
	DUR  shift 48
	VOL  shift 47
	TIME  shift 51
	CHAN  shift 49
	PITCH  shift 52
	LENGTH  shift 53
	NUMBER  shift 57
	TYPE  shift 54
	ATTRIB  shift 55
	FLAGS  shift 56
	PORT  shift 50
	NAME  shift 46
	'?'  shift 147
	'('  shift 144
	.  error

	uniqvar  goto 146
	var  goto 145

45: shift/reduce conflict (shift 107(0), red'n 210(0)) on CLASS
45: shift/reduce conflict (shift 48(0), red'n 210(0)) on DUR
45: shift/reduce conflict (shift 47(0), red'n 210(0)) on VOL
45: shift/reduce conflict (shift 51(0), red'n 210(0)) on TIME
45: shift/reduce conflict (shift 49(0), red'n 210(0)) on CHAN
45: shift/reduce conflict (shift 52(0), red'n 210(0)) on PITCH
45: shift/reduce conflict (shift 53(0), red'n 210(0)) on LENGTH
45: shift/reduce conflict (shift 57(0), red'n 210(0)) on NUMBER
45: shift/reduce conflict (shift 54(0), red'n 210(0)) on TYPE
45: shift/reduce conflict (shift 55(0), red'n 210(0)) on ATTRIB
45: shift/reduce conflict (shift 56(0), red'n 210(0)) on FLAGS
45: shift/reduce conflict (shift 50(0), red'n 210(0)) on PORT
45: shift/reduce conflict (shift 46(0), red'n 210(0)) on NAME
state 45
	expr:  CLASS.var $$115 funcstart $$116 '{' methdefs '}' 
	var:  CLASS.    (210)

	CLASS  shift 107
	DUR  shift 48
	VOL  shift 47
	TIME  shift 51
	CHAN  shift 49
	PITCH  shift 52
	LENGTH  shift 53
	NUMBER  shift 57
	TYPE  shift 54
	ATTRIB  shift 55
	FLAGS  shift 56
	PORT  shift 50
	NAME  shift 46
	.  reduce 210 (src line 572)

	var  goto 148

state 46
	var:  NAME.    (198)

	.  reduce 198 (src line 560)


state 47
	var:  VOL.    (199)

	.  reduce 199 (src line 561)


state 48
	var:  DUR.    (200)

	.  reduce 200 (src line 562)


state 49
	var:  CHAN.    (201)

	.  reduce 201 (src line 563)


state 50
	var:  PORT.    (202)

	.  reduce 202 (src line 564)


state 51
	var:  TIME.    (203)

	.  reduce 203 (src line 565)


state 52
	var:  PITCH.    (204)

	.  reduce 204 (src line 566)


state 53
	var:  LENGTH.    (205)

	.  reduce 205 (src line 567)


state 54
	var:  TYPE.    (206)

	.  reduce 206 (src line 568)


state 55
	var:  ATTRIB.    (207)

	.  reduce 207 (src line 569)


state 56
	var:  FLAGS.    (208)

	.  reduce 208 (src line 570)


state 57
	var:  NUMBER.    (209)

	.  reduce 209 (src line 571)


state 58
	stmts:  stmt stmts.    (4)

	.  reduce 4 (src line 80)


state 59
	stmt:  nosemi ';'.    (9)

	.  reduce 9 (src line 87)


state 60
	expr:  expr '['.expr ']' 

	QMARK2  shift 28
	DOLLAR2  shift 38
	WHILE  shift 17
	IF  shift 19
	FOR  shift 18
	EVAL  shift 36
	TASK  shift 40
	SYM_DELETE  shift 14
	UNDEFINE  shift 21
	FUNC  shift 44
	DEFINED  shift 30
	READONLY  shift 15
	ONCHANGE  shift 16
	GLOBALDEC  shift 105
	CLASS  shift 45
	KW_NEW  shift 20
	NARGS  shift 41
	TYPEOF  shift 42
	XY  shift 43
	DUR  shift 48
	VOL  shift 47
	TIME  shift 51
	CHAN  shift 49
	PITCH  shift 52
	LENGTH  shift 53
	NUMBER  shift 57
	TYPE  shift 54
	ATTRIB  shift 55
	FLAGS  shift 56
	PORT  shift 50
	PHRASE  shift 26
	STRING  shift 25
	NAME  shift 46
	INTEGER  shift 23
	OBJECT  shift 39
	DOUBLE  shift 24
	INC  shift 34
	DEC  shift 35
	'-'  shift 31
	BANG  shift 33
	'~'  shift 32
	'('  shift 29
	'{'  shift 13
	'['  shift 22
	'$'  shift 37
	.  error

	expr  goto 149
	var  goto 27

state 61
	expr:  expr '{'.select1 select2 expr select3 '}' end 
	select1: .    (166)

	.  reduce 166 (src line 507)

	select1  goto 150

state 62
	expr:  expr '?'.tcond expr goto ':' expr end 
	tcond: .    (157)

	.  reduce 157 (src line 490)

	tcond  goto 151

state 63
	expr:  expr '%'.expr 
